--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ header a:hover{
 
 #showcase{
     min-height: 400px;
-    background: url('../Dream\ Tech\ Web/showcase.jpg') no-repeat 0 -400px;
+    background: url("/showcase.jpg") no-repeat 0 -400px;
     text-align: center;
     color: #ffffff; 
 }
@@ -112,13 +112,13 @@ header a:hover{
 
 #newsletter{
     background: #35424a;
-   /* color: #ffffff; */
+   color: #ffffff;
     padding-top: 30px;
     min-height: 70px;
     border-bottom: #e8491d 3px solid;
 
 }
-/*
+
 #newsletter h1{
     float:left;
 }
@@ -135,7 +135,6 @@ header a:hover{
     height:25px;
     width:250px;
 }
-*/
 
 /* Boxes  */
 
