--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ header a:hover{
 
 #showcase{
     min-height: 400px;
-    background: url("/showcase.jpg") no-repeat 0 -400px;
+    background: url("./showcase.jpg") no-repeat 0 -400px;
     text-align: center;
     color: #ffffff; 
 }
